Updated included Cocoon to 2.1m2. Cleaned up some packages. XUpdate: it is now possible to update/rename the root element of the document.
svn path=/trunk/eXist-1.0/; revision=84